# signal_drift

./: .gitignore  README.md
apps/api/: Cargo.toml  requirements.txt
apps/api/app/: main.py
apps/api/src/: main.rs
apps/api/src/lib/api/: signals.ts
apps/api/src/models/: signal.rs
apps/api/src/routes/: health.rs  mod.rs  signals.rs
apps/api/src/services/: mock_signal.rs  mod.rs
apps/apps/api/app/: main.py
apps/web/: package-lock.json
apps/web/app/: page.tsx
apps/web/src/components/: SpectrumVisualizer.tsx
apps/web/src/lib/audio/: SignalSynth.ts
